GARPDev-salesforce/eclipse/GARPDev/src/objects/BLND_DFDT_Discussion__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Attachment_Link__c</fullName>
        <label>Attachment Link</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Purpose__c</fullName>
        <label>Purpose</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DreamTeam Discussion</label>
    <nameField>
        <label>Discussion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Discussions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>